# ExoMy_Model

./: README.md  package.xml
A01_ExoMy.SLDASM/: CMakeLists.txt
A01_ExoMy.SLDASM/urdf/: A01_ExoMy.SLDASM.csv  A01_ExoMy.SLDASM.urdf
ExoMy_Model/: CMakeLists.txt
ExoMy_Model/config/: joint_names_ExoMy_Model.yaml
ExoMy_Model/launch/: gazebo.launch
ExoMy_Model/meshes/: MRB_link.STL  STR_LR_link.STL  cam_link.STL
ExoMy_Model/urdf/: ExoMy_Model.csv
ExoMy_Model_Full/: CMakeLists.txt  package.xml
ExoMy_Model_Full/launch/: display.launch  gazebo.launch
ExoMy_Model_Full/meshes/: STR_RR_link.STL  base_link.STL
ExoMy_Model_Full/urdf/: ExoMy_Model_Full.csv  ExoMy_Model_Full.urdf
docker/: Dockerfile  docker-compose.yaml
exomy_description/: CMakeLists.txt  package.xml
exomy_description/config/: joint_names_exomy_description.yaml
exomy_description/launch/: display.launch  gazebo.launch
exomy_description/meshes/: STR_LR_link.STL  pupils_link.STL
exomy_description/urdf/: exomy_description.csv  exomy_description.urdf
exomy_model/: CMakeLists.txt  package.xml  urdf.rviz
exomy_model/config/: joint_names_exomy_model.yaml
exomy_model/launch/: display.launch  gazebo.launch
exomy_model/meshes/: DRV_RR_link.STL
exomy_model/urdf/: exomy_model.urdf
exomy_sim/: CMakeLists.txt  package.xml
exomy_sim/config/: joint_names_exomy_model.yaml
exomy_sim/env-hooks/: exomy_sim.dsv.in  exomy_sim.sh.in
exomy_sim/models/curiosity/: model.config  model.sdf
exomy_sim/models/exomy_model/: exomy_model.urdf
exomy_sim/models/mars_yard/: model.config  model.sdf
exomy_sim/rviz/: simulation.rviz
exomy_sim/src/: joint_command_node.cpp
exomy_sim/worlds/: curiosity.world  empty.world  mars_yard.world
exomy_sim_launch/: CMakeLists.txt  package.xml
exomy_sim_launch/launch/: simulation.launch.py  spawn_exomy.launch.py
exomy_sim_msgs/: CMakeLists.txt  package.xml
exomy_sim_msgs/msg/: JointCommand.msg  JointCommandArray.msg
launch/: display.launch  gazebo.launch
meshes/: STR_RR_link.STL  base_link.STL
rover_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
rover_gazebo_plugins/include/rover_gazebo_plugins/: rover_gazebo_joint_plugin.hpp
rover_gazebo_plugins/src/: rover_gazebo_joint_plugin.cpp
urdf/: ExoMy_Model.urdf
