<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exomy_sim_launch</name>
  <version>2.0.0</version>
  <description>Package containing the launch files for the ExoMy simulation</description>
  <maintainer email="max.ehrhardt@hotmail.de">Maximilian Ehrhardt</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>exomy</exec_depend>
  <exec_depend>exomy_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>