<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>This package contains all custom Gazebo plugins</description>
  <maintainer email="maximilian.ehrhardt@esa.int">Maximilian Ehrhardt</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>exomy_sim_msgs</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
